[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "formeler"
version = "1.0.1"
authors = [
    { name = "Formeler", email = "hi@formeler.com" },
]
description = "Formeler SDK for Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://formeler.com"
Issues = "https://github.com/FormelerOrganization/formeler_python/issues"
